# x-whatsapp-telegram

./: .gitignore  README.md  SMSStaffControl.spec
.github/workflows/: verify.yml
received/admin-panel/: .env.example  .vercelignore  AdminPanel.spec  SETUP.md  build.bat  requirements.txt  run.py  setup.bat  wsgi.py
received/admin-panel/src/: main.py
received/signal-client/: .env.example  Create Shortcut.bat  README.md  Signal Staff Control.spec  build.bat  prepare-runtime.ps1  requirements.txt  run.py  signal-cli-wrapper.bat
received/signal-client/hooks/: hook-pkg_resources.py  hook-setuptools._vendor.jaraco.py
received/sms-client/: .env.example  README.md  SMSStaffControl.spec  build.bat  phone_server.py  requirements.txt  run.py
received/telegram-client/: .env.example  TelegramStaffControl.spec  build.bat  build.spec  main.py  requirements.txt  run.py
received/whatsapp-app/: index.html  package-lock.json  package.json  tailwind.config.js
received/whatsapp-app/sidecar/: index.js  package-lock.json
received/whatsapp-app/src-tauri/: Cargo.toml  (+1 more)
unified-app/: .env.example  .gitignore  .vercelignore  build-windows.bat  index.html  package-lock.json  package.json  vite.config.ts
unified-app/sidecar/: index.js  package.json
unified-app/src/: App.tsx  globals.css  types.ts
unified-app/src-tauri/: Cargo.toml  tauri.conf.json
unified-app/src-tauri/capabilities/: default.json
unified-app/src-tauri/src/: contacts.rs  lib.rs  main.rs  supabase.rs  telegram.rs  whatsapp.rs
unified-app/telegram-sidecar/: build-windows.bat  main.py  telegram-sidecar.spec
(+64 files in other folders)
