[package]
name = "x-whatsapp"
version = "2.0.0"
description = "X-WhatsApp Staff Management Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "x_whatsapp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tauri-plugin-dialog = "2.7.1"
urlencoding = "2.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
